--- a/.github/workflows/many-platforms.yml
+++ b/.github/workflows/many-platforms.yml
@@ -36,11 +36,11 @@ on:
   schedule:
     # Doc: https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#schedule
     # POSIX cron syntax: https://pubs.opengroup.org/onlinepubs/9699919799/utilities/crontab.html#tag_20_25_07
-    - cron: '53 4 * * 1'
+    - cron: '17 18 * * 1'
 
 # Variables.
 env:
-  package: xxxxxxxx
+  package: bison
   # URL suitable for 'git clone'
   #gnulib_url: https://git.savannah.gnu.org/git/gnulib.git
   gnulib_url: https://github.com/coreutils/gnulib.git
