Include the test-suite.log file in the saved artifacts.

--- a/.github/workflows/many-platforms.yml
+++ b/.github/workflows/many-platforms.yml
@@ -121,6 +121,7 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/test-suite.log
           retention-days: 7
           overwrite: true
   check-linux-gnu-centos:
@@ -164,6 +165,7 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/test-suite.log
           retention-days: 7
           overwrite: true
   check-linux-gnu-alma:
@@ -209,6 +211,7 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/test-suite.log
           retention-days: 7
           overwrite: true
   check-linux-alpine:
@@ -250,6 +253,7 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/test-suite.log
           retention-days: 7
           overwrite: true
   check-macos:
@@ -291,6 +295,7 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/test-suite.log
           retention-days: 7
           overwrite: true
   check-freebsd:
@@ -337,6 +342,7 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/test-suite.log
           retention-days: 7
           overwrite: true
   check-netbsd:
@@ -384,6 +390,7 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/test-suite.log
           retention-days: 7
           overwrite: true
   check-openbsd:
@@ -433,6 +440,7 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/test-suite.log
           retention-days: 7
           overwrite: true
   check-solaris11:
@@ -480,6 +488,7 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/test-suite.log
           retention-days: 7
           overwrite: true
   check-solaris11-omnios:
@@ -525,6 +534,7 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/test-suite.log
           retention-days: 7
           overwrite: true
   check-cygwin:
@@ -586,6 +596,7 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/test-suite.log
           retention-days: 7
           overwrite: true
   check-mingw:
@@ -650,6 +661,7 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/test-suite.log
           retention-days: 7
           overwrite: true
   check-msvc:
@@ -749,6 +761,7 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/test-suite.log
           retention-days: 7
           overwrite: true
   # This is not a platform-specific test, but very useful for finding bugs.
@@ -789,6 +802,7 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/test-suite.log
           retention-days: 7
           overwrite: true
   # This is not a platform-specific test, but very useful for finding ISO C23 compliance bugs.
@@ -834,6 +848,7 @@ jobs:
             ${{ env.package }}-*/build/config.log
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
+            ${{ env.package }}-*/build/test-suite.log
           retention-days: 7
           overwrite: true
   # This is not a platform-specific test, but very useful for finding cross-compilation bugs.
