--- a/.github/workflows/many-platforms.yml
+++ b/.github/workflows/many-platforms.yml
@@ -73,6 +73,8 @@ jobs:
             ${{ env.package }}/config.log
             ${{ env.package }}/config.status
             ${{ env.package }}/log[1234]
+            ${{ env.package }}/test-suite.log
+            ${{ env.package }}/tests/test-suite.log
           retention-days: 7
           overwrite: true
       # Doc: https://docs.github.com/en/actions/using-workflows/storing-workflow-data-as-artifacts
