Include all the testsuite.log files in the saved artifacts.

--- a/.github/workflows/many-platforms.yml
+++ b/.github/workflows/many-platforms.yml
@@ -127,6 +127,8 @@ jobs:
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
             ${{ env.package }}-*/build/test-suite.log
+            ${{ env.package }}-*/build/tests/testsuite.log
+            ${{ env.package }}-*/build/tests/testsuite.dir/*/testsuite.log
           retention-days: 7
           overwrite: true
   check-linux-gnu-centos:
@@ -171,6 +173,8 @@ jobs:
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
             ${{ env.package }}-*/build/test-suite.log
+            ${{ env.package }}-*/build/tests/testsuite.log
+            ${{ env.package }}-*/build/tests/testsuite.dir/*/testsuite.log
           retention-days: 7
           overwrite: true
   check-linux-gnu-alma:
@@ -217,6 +221,8 @@ jobs:
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
             ${{ env.package }}-*/build/test-suite.log
+            ${{ env.package }}-*/build/tests/testsuite.log
+            ${{ env.package }}-*/build/tests/testsuite.dir/*/testsuite.log
           retention-days: 7
           overwrite: true
   check-linux-alpine:
@@ -259,6 +265,8 @@ jobs:
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
             ${{ env.package }}-*/build/test-suite.log
+            ${{ env.package }}-*/build/tests/testsuite.log
+            ${{ env.package }}-*/build/tests/testsuite.dir/*/testsuite.log
           retention-days: 7
           overwrite: true
   check-macos:
@@ -301,6 +309,8 @@ jobs:
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
             ${{ env.package }}-*/build/test-suite.log
+            ${{ env.package }}-*/build/tests/testsuite.log
+            ${{ env.package }}-*/build/tests/testsuite.dir/*/testsuite.log
           retention-days: 7
           overwrite: true
   check-freebsd:
@@ -348,6 +358,8 @@ jobs:
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
             ${{ env.package }}-*/build/test-suite.log
+            ${{ env.package }}-*/build/tests/testsuite.log
+            ${{ env.package }}-*/build/tests/testsuite.dir/*/testsuite.log
           retention-days: 7
           overwrite: true
   check-netbsd:
@@ -396,6 +408,8 @@ jobs:
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
             ${{ env.package }}-*/build/test-suite.log
+            ${{ env.package }}-*/build/tests/testsuite.log
+            ${{ env.package }}-*/build/tests/testsuite.dir/*/testsuite.log
           retention-days: 7
           overwrite: true
   check-openbsd:
@@ -446,6 +460,8 @@ jobs:
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
             ${{ env.package }}-*/build/test-suite.log
+            ${{ env.package }}-*/build/tests/testsuite.log
+            ${{ env.package }}-*/build/tests/testsuite.dir/*/testsuite.log
           retention-days: 7
           overwrite: true
   check-solaris11:
@@ -495,6 +511,8 @@ jobs:
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
             ${{ env.package }}-*/build/test-suite.log
+            ${{ env.package }}-*/build/tests/testsuite.log
+            ${{ env.package }}-*/build/tests/testsuite.dir/*/testsuite.log
           retention-days: 7
           overwrite: true
   check-solaris11-omnios:
@@ -542,6 +560,8 @@ jobs:
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
             ${{ env.package }}-*/build/test-suite.log
+            ${{ env.package }}-*/build/tests/testsuite.log
+            ${{ env.package }}-*/build/tests/testsuite.dir/*/testsuite.log
           retention-days: 7
           overwrite: true
   check-cygwin:
@@ -604,6 +624,8 @@ jobs:
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
             ${{ env.package }}-*/build/test-suite.log
+            ${{ env.package }}-*/build/tests/testsuite.log
+            ${{ env.package }}-*/build/tests/testsuite.dir/*/testsuite.log
           retention-days: 7
           overwrite: true
   check-mingw:
@@ -670,6 +692,8 @@ jobs:
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
             ${{ env.package }}-*/build/test-suite.log
+            ${{ env.package }}-*/build/tests/testsuite.log
+            ${{ env.package }}-*/build/tests/testsuite.dir/*/testsuite.log
           retention-days: 7
           overwrite: true
   check-msvc:
@@ -771,6 +795,8 @@ jobs:
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
             ${{ env.package }}-*/build/test-suite.log
+            ${{ env.package }}-*/build/tests/testsuite.log
+            ${{ env.package }}-*/build/tests/testsuite.dir/*/testsuite.log
           retention-days: 7
           overwrite: true
   # This is not a platform-specific test, but very useful for finding bugs.
@@ -814,6 +840,8 @@ jobs:
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
             ${{ env.package }}-*/build/test-suite.log
+            ${{ env.package }}-*/build/tests/testsuite.log
+            ${{ env.package }}-*/build/tests/testsuite.dir/*/testsuite.log
           retention-days: 7
           overwrite: true
   # This is not a platform-specific test, but very useful for finding ISO C23 compliance bugs.
@@ -861,6 +889,8 @@ jobs:
             ${{ env.package }}-*/build/config.status
             ${{ env.package }}-*/build/log[123]
             ${{ env.package }}-*/build/test-suite.log
+            ${{ env.package }}-*/build/tests/testsuite.log
+            ${{ env.package }}-*/build/tests/testsuite.dir/*/testsuite.log
           retention-days: 7
           overwrite: true
   # This is not a platform-specific test, but very useful for finding cross-compilation bugs.
