--- a/.github/workflows/many-platforms.yml
+++ b/.github/workflows/many-platforms.yml
@@ -595,7 +595,7 @@ jobs:
           platform: ${{ matrix.bitness == 32 && 'x86' || 'x86_64' }}
           # Install Cygwin packages.
           # List of packages: https://cygwin.com/packages/package_list.html
-          packages: m4 gcc-core gcc-g++ make
+          packages: m4 gcc-core gcc-g++ make perl
       - name: cygcheck
         run: cygcheck -V
       - name: cygcheck
